src/test/deca/context/invalid/created/declVar3.deca
// Resultats:
//    Erreur contextuelle
//    Ligne 7 : Identifier a must have a definition

{
    a = 1;
}